--- a/HTML&CSS/Position/Position.css
+++ b/HTML&CSS/Position/Position.css
@@ -7,8 +7,8 @@ div{
 .div1{
 
 background-color: red;
-position:relative;
-top:5px;
+position:static;
+top:0px;
 left:15px;
 
 }
@@ -19,6 +19,7 @@ background-color:rebeccapurple;
 position: absolute;
 bottom: 0px;
 width: 100px;
+top:0px;
 
 }
 
@@ -28,6 +29,7 @@ background-color:darkgoldenrod;
 position:fixed;
 bottom:100px;
 width:100px;
+top:50px;
 
 
 
