--- a/HTML&CSS/ORF/style.css
+++ b/HTML&CSS/ORF/style.css
@@ -1,10 +1,101 @@
-body{
-    
+/*CSS*/
+
+.main{
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.row{
-    background-color: darkred;
+.information{
+    background-color: white;
     width: 100%;
-    height: 60px;
+    height: 700px;
+    margin-top: -3px;
+    z-index: 1;
+}
+
+.header-one{
+    background-color: rgb(128, 0, 0);
+    width: 80%;
+    height: 40px;
     display: flex;
+    justify-content: space-between;
+}
+
+.header-two{
+    background-color: #a00c0c;
+    width: 80%;
+    height: 60px;
+}
+
+.logo{
+    background-color: #c0141c;
+    width: 80%;
+    height: 120px;
+}
+
+img{
+    max-width: 150%;
+    height: auto;
+}
+
+
+.Rona{
+    margin-left: 20px;
+    color: gray;
+}
+
+.titletext{
+    margin-left: 20px;
+    margin-top: -10px;
+}
+
+#text{
+    font-family: "ORF ON",Arial,Helvetica,Lucida Sans Unicode,Lucida Grande,sans-serif;
+    font-feature-settings: "liga", "kern";
+}
+
+.headerleft{
+    color: rgb(19, 18, 18);
+    width: 80%;
+    height: 40px;
+    margin: 0px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.headerright{
+    color: rgb(212, 19, 19);
+    display: flex;
+    width: auto;
+    margin-right: 10px;
+    align-items: center;
+}
+
+li{
+    display: inline-block;
+}
+
+.headerlist{
+    display: flex;
+    height: 100%;
+    justify-content: space-between;
+    margin: 0px;
+    align-items: center;
+}
+
+.logo{
+    display:flex;
+    align-items: center;
+}
+
+.logotext{
+    font-size: 40px;
+    padding-left: 20px;
+    color: rgb(240, 240, 240);
+}
+
+.text{
+    padding:10px;
 }
