--- a/Fussball-Website/style.css
+++ b/Fussball-Website/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 header {
-    background-image: url('dein-hintergrundbild.jpg');
+    background-image: url('FussballBild.png');
     background-size: cover;
     color: white;
     padding: 20px;
@@ -32,6 +32,40 @@ nav ul li a {
     text-decoration: none;
     color: white;
     font-weight: bold;
+}
+
+.dropdown {
+    display: inline-block;
+}
+
+.dropbtn {
+    color: white;
+    font-weight: bold;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: black;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    display: block;
+    text-decoration: none;
+}
+
+.dropdown-content a:hover {
+    background-color: #555;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 main {
